feat: user activation 🚀
